Update project to JAVA 15.